...
        bottom: false,
        child: BlocBuilder<ObserverBloc, ObserverState>(
          builder: (context, observerState) {
            return BlocBuilder<CameraBloc, CameraState>(
              builder: (context, cameraState) {
                return CustomScrollView(
                  key: const ValueKey('settings-scroll-view'),
                  slivers: [
                    CupertinoSliverNavigationBar(
                      backgroundColor: AppColors.dark.background,
                      border: null,
                      largeTitle: Text(
                        AppLocalizations.of(context).settingsTitle,
...
